# AI-Agriculture-Assistant-for-Indian-Farmers

./: .gitignore  AGRI_AI_PLATFORM_ARCHITECTURE.md  Makefile  README.md  docker-compose.yml  plan.txt
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/agents/: crop_agent.py  disease_agent.py  graph.py  market_agent.py  notification_agent.py  rag_agent.py  scheme_agent.py  soil_agent.py  state.py  supervisor_agent.py  translation_node.py  validation_node.py  weather_agent.py
backend/core/: config.py  dependencies.py  logging.py  security.py
backend/db/: mongodb.py
backend/mcp/: client.py  server.py
backend/models/: admin_user.py  chat_history.py  crop_advisory.py  disease_report.py  farm.py  farmer_profile.py  market_price.py  notification.py  scheme.py  soil_advisory.py  uploaded_file.py  user.py  weather_alert.py
backend/routers/: admin.py  auth.py  chat.py  crops.py  disease.py  farmers.py  market.py  notifications.py  schemes.py  soil.py  weather.py
backend/schemas/: auth.py  chat.py  disease.py  farmer.py  market.py  notification.py  scheme.py  soil.py  weather.py
backend/scripts/: ingest_documents.py  seed_schemes.py  setup_qdrant.py
backend/services/: embedding_service.py  llm_service.py
backend/tests/: conftest.py
backend/tests/fixtures/: sample_data.py
backend/tests/integration/: test_auth_flow.py
backend/tests/unit/test_agents/: test_supervisor.py  test_validation_node.py
backend/tests/unit/test_tools/: test_crop_tool.py  test_scheme_tool.py  test_soil_tool.py
backend/tools/: crop_tool.py  disease_tool.py  market_tool.py  notification_tool.py  profile_tool.py  rag_tool.py  scheme_tool.py  soil_tool.py  weather_tool.py
backend/workers/: celery_app.py
backend/workers/tasks/: embedding_tasks.py  notification_tasks.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: GovFooter.tsx  GovHeader.tsx  LanguageSwitcher.tsx
nginx/: nginx.conf
(+24 files in other folders)
