[project]
name = "agri-ai-platform"
version = "0.1.0"
description = "AI-powered agriculture assistant for Indian farmers"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "python-multipart>=0.0.9",

    # Configuration
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",

    # MongoDB
    "pymongo>=4.14.0",
    "beanie>=2.0.0",

    # Redis
    "redis>=5.0.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1,<6.0.0",

    # LangGraph + LangChain
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-groq>=0.1.0",
    "langchain-openai>=0.1.0",

    # Vector DB
    "qdrant-client>=1.9.0",

    # Embeddings
    "sentence-transformers>=3.0.0",

    # LLM providers
    "groq>=0.9.0",
    "openai>=1.30.0",

    # MCP
    "fastmcp>=0.4.0",
    "mcp>=1.0.0",

    # Image processing
    "Pillow>=10.3.0",

    # STT / TTS
    "openai-whisper>=20231117",

    # HTTP client
    "httpx>=0.27.0",

    # Background tasks
    "celery>=5.4.0",

    # Observability
    "langsmith>=0.1.0",
    "sentry-sdk[fastapi]>=2.0.0",

    # Document processing (RAG ingestion)
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",

    # Utilities
    "python-slugify>=8.0.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "anyio[trio]>=4.4.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "mongomock-motor>=0.0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
